RESOLVED FIXED55735
AX: kAXCellForColumnAndRowParameterizedAttribute doesn't work ARIA grids with colspans
https://bugs.webkit.org/show_bug.cgi?id=55735
Summary AX: kAXCellForColumnAndRowParameterizedAttribute doesn't work ARIA grids with...
chris fleizach
Reported 2011-03-03 17:54:38 PST
If a table is defined as an aria-grid and the cells have colspans, AX will not return the right element for kAXCellForColumnAndRowParameterizedAttribute. We need to check the ranges of each cell before returning one.
Attachments
patch (7.09 KB, patch)
2011-03-03 18:20 PST, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2011-03-03 17:54:50 PST
chris fleizach
Comment 2 2011-03-03 18:20:02 PST
Beth Dakin
Comment 3 2011-03-04 15:00:02 PST
Comment on attachment 84675 [details] patch 140 int intRow = static_cast<int>(row); 141 int intColumn = static_cast<int>(column); This can probably be a soft-cast instead of a static cast, and I think that would be better. We try to only use static_cast when necessary.
chris fleizach
Comment 4 2011-03-07 09:20:35 PST
Note You need to log in before you can comment on or make changes to this bug.