AX: kAXCellForColumnAndRowParameterizedAttribute doesn't work ARIA grids with colspans https://bugs.webkit.org/show_bug.cgi?id=55735

Reviewed by Beth Dakin.

Source/WebCore:

The ARIA grid implementation needed to verify the row/column range of a cell instead of
assuming a 1-1 mapping between children and row/column.

Test: platform/mac/accessibility/aria-table-with-colspan-cells.html

* accessibility/AccessibilityARIAGrid.cpp:
(WebCore::AccessibilityARIAGrid::cellForColumnAndRow):

LayoutTests:

* platform/mac/accessibility/aria-table-with-colspan-cells-expected.txt: Added.
* platform/mac/accessibility/aria-table-with-colspan-cells.html: Added.



Canonical link: https://commits.webkit.org/70364@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80470 268f45cc-cd09-0410-ab3c-d52691b4dbfc